--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "test": "jest"
   },
   "dependencies": {
+    "fuzzball": "^1.1.5",
     "lodash": "^4.17.10",
     "react": "16.4.1",
     "react-native": "0.56.0"
