--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "devDependencies": {
     "babel-jest": "23.4.2",
     "babel-preset-react-native": "^5",
+    "eslint": "^5.3.0",
     "jest": "23.5.0",
     "react-test-renderer": "16.4.1"
   },
