--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "test": "jest"
   },
   "dependencies": {
+    "fast-xml-parser": "^3.12.0",
     "fuzzball": "^1.1.5",
     "lodash": "^4.17.10",
     "react": "16.4.1",
